# LabelPlusX

./: .dockerignore  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  pages.yml  release.yml
scripts/: tauri-dev-server.mjs
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: i18n.ts  labelplus.ts  tauri.ts
