[package]
name = "labelplusx"
version = "0.1.0"
description = "Modern LabelPlus client"
authors = ["OpenCode"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
